# medtronic

./: .gitignore  pyproject.toml  readme.MD
src/: errors.py  sensors.py  sensors_threads.py
tests/: test_sensors.py  test_threads.py
